--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "flowbite-svelte": "^0.9.8",
     "postcss": "^8.4.8",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
     "svelte": "^3.44.0",
     "tailwindcss": "^3.0.23"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "swiper": "^8.0.7"
+  }
 }
