--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "flowbite": "^1.3.4",
     "flowbite-svelte": "^0.9.8",
     "postcss": "^8.4.8",
     "prettier": "^2.5.1",
@@ -31,6 +32,7 @@
   },
   "type": "module",
   "dependencies": {
+    "flickity": "^3.0.0",
     "swiper": "^8.0.7"
   }
 }
