--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@lottiefiles/svelte-lottie-player": "^0.2.0",
     "flickity": "^3.0.0",
     "swiper": "^8.0.7"
   }
