--- a/package.json
+++ b/package.json
@@ -1,41 +1,51 @@
 {
-  "name": "island-traders",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "prepare": "svelte-kit sync",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-vercel": "^1.0.0-next.47",
-    "@sveltejs/kit": "next",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.5.0",
-    "@tailwindcss/line-clamp": "^0.3.1",
-    "@tailwindcss/typography": "^0.5.2",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "flowbite-svelte": "^0.9.8",
-    "postcss": "^8.4.8",
-    "prettier": "^2.5.1",
-    "prettier-plugin-svelte": "^2.5.0",
-    "svelte": "^3.44.0",
-    "tailwindcss": "^3.0.23"
-  },
-  "type": "module",
-  "dependencies": {
-    "@lottiefiles/svelte-lottie-player": "^0.2.0",
-    "axios": "^0.26.1",
-    "flickity": "^3.0.0",
-    "svelte-multistep-form": "^0.0.6",
-    "svelte-select": "^4.4.7",
-    "swiper": "^8.0.7"
-  }
+	"name": "island-traders",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"package": "svelte-kit package",
+		"preview": "svelte-kit preview",
+		"prepare": "svelte-kit sync",
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.47",
+		"@sveltejs/kit": "next",
+		"@tailwindcss/aspect-ratio": "^0.4.0",
+		"@tailwindcss/forms": "^0.5.0",
+		"@tailwindcss/line-clamp": "^0.3.1",
+		"@tailwindcss/typography": "^0.5.2",
+		"autoprefixer": "^10.4.2",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^3.2.1",
+		"flowbite-svelte": "^0.9.8",
+		"postcss": "^8.4.8",
+		"prettier": "^2.5.1",
+		"prettier-plugin-svelte": "^2.5.0",
+		"svelte": "^3.44.0",
+		"svelte-simple-datatables": "^0.2.3",
+		"tailwindcss": "^3.0.23"
+	},
+	"type": "module",
+	"dependencies": {
+		"@lottiefiles/svelte-lottie-player": "^0.2.0",
+		"axios": "^0.26.1",
+		"flickity": "^3.0.0",
+		"svelte-multistep-form": "^0.0.6",
+		"swiper": "^8.0.7"
+	},
+	"keywords": [
+		"svelte",
+		"table",
+		"sortable"
+	],
+	"files": [
+		"src",
+		"index.mjs",
+		"index.js"
+	]
 }
