--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
+		"svelte-outclick": "^3.0.1",
 		"svelte-simple-datatables": "^0.2.3",
 		"tailwindcss": "^3.0.23"
 	},
